--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,23 @@ body{
     margin: 0 auto;
 }
 
+#container
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: hold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#tagline
+{
+    padding: 0 0 0 1cm;
+    font-weight: normal;
+    font-size: 0.8cm;
+}
+
 #container h1
 {
     font-size: 20px;
